fix(ui): enable dropdown close on iOS touch

--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,12 @@
 @import './prose.css';
 @import './editor.css';
 
+@media (pointer: coarse) {
+  html {
+    cursor: pointer;
+  }
+}
+
 [data-overlay-container='true'] {
   height: 100%;
   width: 100%;
